config ok works on windows whit vs code